--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "sweetalert2": "^11.4.0"
   }
 }
